--- a/BCP.tex
+++ b/BCP.tex
@@ -1,7 +1,6 @@
 \documentclass[10pt]{book}
 \usepackage[a5paper, inner=25.4mm,outer=20mm,top=15mm,bottom=15mm,heightrounded]{geometry}
 \frenchspacing
-\graphicspath{{images}}
 \usepackage{pifont}
 \usepackage{ebgaramond}
 \usepackage{enumerate}
@@ -100,6 +99,7 @@
 \fussy
 }
 \usepackage{graphicx}
+%\graphicspath{images/}
 \usepackage{wrapfig}
 \usepackage{epsfig}
 \newcommand{\sn}[1]{\marginpar{\raggedright{\footnotesize{#1}}}}
@@ -175,8 +175,8 @@
 %\include{pages/Terce.tex}
 %\include{pages/Sext.tex}
 %\include{pages/None.tex}
-\include{pages/pages/Evensong.tex}
-\include{pages/pages/Benediction.tex}
+\include{pages/Evensong.tex}
+\include{pages/Benediction.tex}
 \include{pages/Compline.tex}
 \include{pages/Mary.tex}
 \include{pages/Dead.tex}
